sas-core/main/default/objects/SBS_ScheduledBatchRunTxnError__c/SBS_ScheduledBatchRunTxnError__c.object-meta.xml
<CustomObject>
    <description>Represents a caught error for a scheduled batch component.</description>
    <label>Scheduled Batch Run Txn Error</label>
    <nameField>
        <displayFormat>E-{0000000}</displayFormat>
        <label>Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Batch Run Txn Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>