sas-core/main/default/objects/SBS_ScheduledBatchRunTxnError__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>The error message explaining the error.</description>
    <label>Error Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>