sas-core/main/default/objects/SBS_ScheduledBatchRunTxnError__c/fields/ScheduledBatchRunComponent__c.field-meta.xml
<CustomField>
    <fullName>ScheduledBatchRunComponent__c</fullName>
    <description>The scheduled batch run component under which this error occurred.</description>
    <label>Scheduled Batch Run Component</label>
    <referenceTo>SBS_ScheduledBatchRunComponent__c</referenceTo>
    <relationshipLabel>Errors</relationshipLabel>
    <relationshipName>ScheduledBatchRunTxnErrors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>