sas-core/main/default/objects/SBS_ScheduledBatchRunTxnError__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>The scope of records which generated the error.</description>
    <label>Scope</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>