sas-core/main/default/objects/SBS_ScheduledBatchRunTxnError__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>The stack trace of the exception generating the error.</description>
    <label>Stack Trace</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>